changed title icon

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             </div>
             <div class="item intro">
                 <p> Hi!
-                    I am Michelle, a second year <a
+                    I am Michelle, a penultimate year <a
                         href="https://www.imperial.ac.uk/study/ug/courses/school-design-engineering/design-engineering/"
                         target="_blank">MEng Design Engineering</a> student at Imperial College London,
                     graduating in July 2023. I am currently searching for a 6-month industrial placement in
@@ -157,7 +157,7 @@
             </div> -->
 
             <div class="card card3">
-                <a href="comingsoon.html">
+                <a href="https://github.com/michelleleeyk/portfolio">
                     <i class="fas fa-arrow-right"></i>
                     <p>Portfolio 1.0
                         <br><span class="description">Version 1 of my portfolio website, coded from
