--- a/index.html
+++ b/index.html
@@ -214,5 +214,5 @@
 
 <footer>
     <p>Designed & Built by <a id="no-bold" class="underline-animation" href="mailto:michelleyikay.lee@gmail.com"
-            target="_blank">Michelle Lee</a></p>
+            target="_blank">Michelle Lee</a> | A mobile responsive version of this website is in the works</p>
 </footer>
