added datsci project and fixed fontawesome icon

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <meta content="width=device-width, initial-scale=1" name="viewport" />
 <title>Michelle Lee</title>
 <link rel="icon" href="assets/title-icon.png" type="image/icon type">
+
 <link href="./default.css" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;600;700&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet">
@@ -11,11 +12,6 @@
 <!-- links for the PROJECT TICKETS -->
 <link href="ticket.css" rel="stylesheet">
 <!-- <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.min.css" rel="stylesheet"> -->
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;600;700&display=swap" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet">
-
-
-
 
 
 <header>
@@ -115,7 +111,6 @@
             <div class="card">
                 <!-- <a href="kaia.html"> -->
                 <a href="comingsoon.html">
-                    <!-- <i class="fab fa-accessible-icon"></i> -->
                     <i class="fas fa-arrow-right"></i>
                     <p>Kaia Pill Pack
                         <br><span class="description">Reimagining the way women consume oral
@@ -183,11 +178,24 @@
             </div>
 
             <div class="card card5">
-                <a href="proj_pvz.html" target="_blank">
+                <a href="proj_pvz.html">
                     <i class="fas fa-arrow-right"></i>
                     <p>Plant vs Zombie, the Machine
                         <br><span class="description">Arduino game that provides users with a playful and nostalgic
                             interaction.</span><br><br><span class="languages">> Arduino C</span>
+                    </p>
+                    <div class="pic"></div>
+                    <button></button>
+                </a>
+            </div>
+
+            <div class="card card6">
+                <a href="proj_datsci.html">
+                    <i class="fas fa-arrow-right"></i>
+                    <p>Predictive Model
+                        <br><span class="description">Models that predict how suitable a song is for
+                            dancing based on its characteristics</span><br><br><span class="languages">> Python Pandas
+                            Sklearn</span>
                     </p>
                     <div class="pic"></div>
                     <button></button>
@@ -203,9 +211,8 @@
         <p>A sneak peek into what I've been up to...</p>
         <ul>
             <li>Learning React on Codecademy</li>
-            <li>Tutoring @ Fire Tech Camp for teen courses in Python and Machine Learning</li>
-            <li>Learning to brew kombucha at home</li>
-            <li>Reading 'A Monk's Guide to a Clean House and Mind' by Shoukei Matsumoto</li>
+            <li>Teaching teen courses in Machine Learning @ Fire Tech Camp</li>
+            <li>Learning to brew kombucha at home and experimenting with different flavours</li>
         </ul>
     </section>
 
