removed kaia project

--- a/index.html
+++ b/index.html
@@ -108,8 +108,7 @@
 
         <!-- WORK - PROJECT TICKETS -->
         <div class="container">
-            <div class="card">
-                <!-- <a href="kaia.html"> -->
+            <!-- <div class="card">
                 <a href="comingsoon.html">
                     <i class="fas fa-arrow-right"></i>
                     <p>Kaia Pill Pack
@@ -120,8 +119,7 @@
                     <div class="pic"></div>
                     <button></button>
                 </a>
-            </div>
-
+            </div> -->
 
             <div class="card card2">
                 <!-- <a href="kaia.html"> -->
@@ -137,19 +135,6 @@
                     <button></button>
                 </a>
             </div>
-
-            <!--   IMPERIAL ENTREPRENEURS TICKET
-            <div class="card card2">
-                <a href="https://www.union.ic.ac.uk/scc/entrepreneurs/" target="_blank">
-                    <i class="fas fa-arrow-right"></i>
-                    <p>Imperial Entrepreneurs
-                        <br><span class="description">Website for the Imperial College Entrepreneurs
-                            Society.</span><br><br><span class="languages">HTML CSS</span>
-                    </p>
-                    <div class="pic"></div>
-                    <button></button>
-                </a>
-            </div> -->
 
             <div class="card card3">
                 <a href="https://github.com/michelleleeyk/portfolio">
