--- a/index.html
+++ b/index.html
@@ -57,14 +57,14 @@
                         target="_blank">MEng Design Engineering</a> student at Imperial College London,
                     graduating in July 2023. I am currently searching for a 6-month industrial placement in
                     <span class="contrast-color">software engineering</span> from April to September
-                    2022.<br><br>
+                    2022. I have experience in <span class="contrast-color">full stack development</span>, <span
+                        class="contrast-color">web design</span> and I'm learning<span
+                        class="contrast-color">React</span> over the summer. <br><br>
 
                     With modules in 3 main areas - Engineering, Computing and Design, my time at Imperial is molding me
-                    into a T-shaped engineer. I have experience in <span class="contrast-color">full stack
-                        development</span>, <span class="contrast-color">web design</span> and am learning
-                    <span class="contrast-color">React</span> over the summer. I pride myself on being a
-                    creative problem solver that
-                    can bring their own ideas to the table.<br>
+                    into a T-shaped engineer, which I believe has trained me to be a fast learner and more effective
+                    communicator. I pride myself on being a creative problem solver that can bring their own
+                    ideas to the table. <br>
 
                     <br>
                     <!-- 
@@ -104,7 +104,7 @@
     </section>
 
     <section id="work" class="work">
-        <h2 class="contrast-color">work</h2>
+        <h2 class="contrast-color">projects</h2>
 
         <!-- WORK - PROJECT TICKETS -->
         <div class="container">
