--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <nav class="nav">
         <span><a class="underline-animation" href="#about">about</a></span>
         <span class="light-blue-line">|</span>
-        <span><a class="underline-animation" href="#work">work</a></span>
+        <span><a class="underline-animation" href="#work">projects</a></span>
     </nav>
 
     <div class="contact">
@@ -58,7 +58,7 @@
                     graduating in July 2023. I am currently searching for a 6-month industrial placement in
                     <span class="contrast-color">software engineering</span> from April to September
                     2022. I have experience in <span class="contrast-color">full stack development</span>, <span
-                        class="contrast-color">web design</span> and I'm learning<span
+                        class="contrast-color">web design</span> and I'm learning <span
                         class="contrast-color">React</span> over the summer. <br><br>
 
                     With modules in 3 main areas - Engineering, Computing and Design, my time at Imperial is molding me
