added compressed Aarke video

--- a/arch_indus.html
+++ b/arch_indus.html
@@ -49,10 +49,10 @@
         </div>
     </section>
 
-    <!-- <video width=100% controls>
-        <source src="assets/arch_indus/aarke_video.mp4" type="video/mp4">
+    <video width=100% controls>
+        <source src="assets/arch_indus/aarke_compressed.mp4" type="video/mp4">
         Your browser does not support the video tag.
-    </video> -->
+    </video>
 
     <h3>Team Members</h3>
     <ul>
