edited bio and order of archived projects

--- a/index.html
+++ b/index.html
@@ -50,16 +50,16 @@
                     I am Michelle, a penultimate year <a
                         href="https://www.imperial.ac.uk/study/ug/courses/school-design-engineering/design-engineering/"
                         target="_blank">MEng Design Engineering</a> student at Imperial College London,
-                    graduating in July 2023. I am currently searching for a 6-month industrial placement in
+                    graduating in Aug 2023. I am currently searching for a 6-month industrial placement in
                     <span class="contrast-color">software engineering</span> from April to September
                     2022. I have experience in <span class="contrast-color">full stack development</span>, <span
-                        class="contrast-color">web design</span> and I'm learning <span
-                        class="contrast-color">React</span> over the summer. <br><br>
+                        class="contrast-color">web design</span> and learned <span class="contrast-color">React</span>
+                    over the summer. <br><br>
 
-                    With modules in 3 main areas - Engineering, Computing and Design, my time at Imperial is molding me
-                    into a T-shaped engineer, which I believe has trained me to be a fast learner and more effective
-                    communicator. I pride myself on being a creative problem solver that can bring their own
-                    ideas to the table. <br>
+                    With modules in 3 main areas - Engineering, Computing and Product Design, my time at Imperial is
+                    molding me into a T-shaped engineer, which I believe has trained me to be a fast learner and more
+                    effective communicator. Equipped with design thinking and practical engineering skills, I pride
+                    myself on being a creative problem solver that can bring their own ideas to the table. <br>
 
                     <br>
                     <!-- 
@@ -189,16 +189,6 @@
         <h2 class="contrast-color">archive</h2>
         <ul>
             <li>
-                <a href="https://github.com/michelleleeyk/portfolio">
-                    Portfolio ver1.0 - The first version of my portfolio website
-                </a>
-            </li>
-            <li>
-                <a href="arch_fea.html">
-                    Finite Element Analysis - Stress, frequency and fatigue simulations on a bicycle tandem frame
-                </a>
-            </li>
-            <li>
                 <a href="arch_susdes.html">
                     Sustainable Design - Designing a product service system for the circular economy
                 </a>
@@ -211,6 +201,16 @@
             <li>
                 <a href="arch_indus.html">
                     Industrial Design - Redesigning an electric wine opener for users with limited dexterity
+                </a>
+            </li>
+            <li>
+                <a href="https://github.com/michelleleeyk/portfolio">
+                    Portfolio ver1.0 - The first version of my portfolio website
+                </a>
+            </li>
+            <li>
+                <a href="arch_fea.html">
+                    Finite Element Analysis - Stress, frequency and fatigue simulations on a bicycle tandem frame
                 </a>
             </li>
         </ul>
